# IndustrialSystems

./: .gitignore  CMakeLists.txt  README.md
data/network/: descriptor  hidden  m_hidden  m_output  output
data/previous_scores/: score_matrix_iter_one.csv
data/processed images/: training_data.csv  validation_data.csv
data/scores/: score_matrix.csv
include/: img.h  lodepng.h  matrix.h  nn.h  preprocess.h
src/: img.cpp  main.cpp  matrix.cpp  nn.cpp
